--- a/main/DAL/DAL.csproj
+++ b/main/DAL/DAL.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.78" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ContextBinds\ContextBinds.csproj" />
     <ProjectReference Include="..\Models\Models.csproj" />
   </ItemGroup>
