--- a/main/EFISCO/appsettings.json
+++ b/main/EFISCO/appsettings.json
@@ -14,7 +14,7 @@
 
     "ProducaoNFeXML": "Server=192.168.1.17;Database=NFeXML;User Id=EFISCO;Password=Imperador; MultipleActiveResultSets=True;",
     "ProducaoWebFrame": "Server=192.168.1.17;Database=WebFrame;User Id=ColorobbiaPlataform;Password=Imperador; MultipleActiveResultSets=True;",
-    "ProducaoProtheus": "Server=192.168.1.17;Database=HOMOLOGACAO;User ID=totvs;Password=totvs#741; Connect Timeout=3000; MultipleActiveResultSets=True;"
+    "ProducaoProtheus": "Server=192.168.1.17;Database=PROTHEUS_PRODUCAO;User ID=totvs;Password=totvs#741; Connect Timeout=3000; MultipleActiveResultSets=True;"
 
   },
   "ConecxaoAtiva": "ProducaoWebFrame",
