--- a/main/BLL/BLL.csproj
+++ b/main/BLL/BLL.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="EPPlus" Version="5.4.1" />
+    <PackageReference Include="EPPlus" Version="5.7.1" />
   </ItemGroup>
 
   <ItemGroup>
