--- a/main/EFISCO/appsettings.json
+++ b/main/EFISCO/appsettings.json
@@ -11,8 +11,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
 
-    "LocalHostNFeXML": "Server=192.168.1.169;Database=NFeXML;User Id=sa;Password=Ev@gelion01; Connect Timeout=3000;MultipleActiveResultSets=True;",
-    "LocalProtheus": "Server=192.168.1.169;Database=HML_02;User Id=sa;Password=Ev@gelion01; MultipleActiveResultSets=True;",
+    //"LocalHostNFeXML": "Server=192.168.1.169;Database=NFeXML;User Id=sa;Password=Ev@gelion01; Connect Timeout=3000;MultipleActiveResultSets=True;",
+    //"LocalProtheus": "Server=192.168.1.169;Database=HML_02;User Id=sa;Password=Ev@gelion01; MultipleActiveResultSets=True;",
 
     "ProducaoNFeXML": "Server=192.168.1.252;Database=NFeXML;User Id=EFISCO;Password=Imperador; MultipleActiveResultSets=True;",
     "ProducaoProtheus": "Server=192.168.1.252;Database=PROTHEUS_PRODUCAO;User ID=totvs;Password=totvs#741; Connect Timeout=3000; MultipleActiveResultSets=True;"
