--- a/main/EFISCO.Email.Teste/EFISCO.Email.Teste.csproj
+++ b/main/EFISCO.Email.Teste/EFISCO.Email.Teste.csproj
@@ -7,6 +7,10 @@
 
   <ItemGroup>
     <PackageReference Include="Mail.dll" Version="3.0.22269.1117" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.9" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.9" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.10" />
   </ItemGroup>
 
 </Project>
