--- a/main/EFISCO/appsettings.json
+++ b/main/EFISCO/appsettings.json
@@ -11,8 +11,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
 
-    "ProducaoNFeXML": "Server=192.168.1.252;Database=NFeXML;User Id=EFISCO;Password=Imperador; MultipleActiveResultSets=True;",
-    "ProducaoProtheus": "Server=192.168.1.252;Database=PROTHEUS_PRODUCAO;User ID=totvs;Password=totvs#741; Connect Timeout=3000; MultipleActiveResultSets=True;"
+    "ProducaoNFeXML": "Server=192.168.1.252;Database=NFeXML;User Id=EFISCO;Password=Imperador; MultipleActiveResultSets=True; Encrypt=False;",
+    "ProducaoProtheus": "Server=192.168.1.252;Database=PROTHEUS_PRODUCAO;User ID=totvs;Password=totvs#741; Connect Timeout=3000; MultipleActiveResultSets=True; Encrypt=False;"
 
   },
   "ConecxaoAtivaBaseNfe": "ProducaoNFeXML",
